--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "verceldeploy": "npm clean && npm install --legacy-peer-deps && npm run build && npm run start:prod"
+    "vercel-deploy": "npm ci --legacy-peer-deps && npm run build && npm run start:prod"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
